--- a/fetch_artists/resources/css/style.css
+++ b/fetch_artists/resources/css/style.css
@@ -70,36 +70,35 @@ header{
 .holdata div{
     background:white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.582);
-    height: 100px;
     width: 80%;
+    height: 100px;
     margin: auto;
     margin-bottom: 30px;
     border-radius: 100px;
-    position: relative;
 }
 
 .holdata div p{
-    background: green;
+    /* background: green; */
     height: auto;
     width: 100%;
     /* overflow: hidden; */
     font-family: 'Ubuntu', sans-serif;
-    position: relative;
 }
 
 .holdata div span{
-    background-color: red;
+    /* background-color: red; */
     padding: 10px 0;
-    height: 100px;
+    /* height: 100px; */
     width: 20%;
     text-align: center;
-    display: inline-block;
-    margin-top: 0;
+    display: block;
+    margin: auto;
 }
 
 .picspan{
     position: relative;
     overflow: hidden;
+    height: 100px;
 }
 
 .yoimg{
@@ -108,14 +107,15 @@ header{
     border-radius: 50%;
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    left: 0%;
+    transform: translateY(-50%);
 }
 
 .holdata div .view{
     background: rgb(0, 155, 226);
-    /* width: 15%; */
+    width: 15%;
     cursor: pointer;
+    border-radius: 50px;
     transition: 0.3s;
     color: white;
 }
